# Event-Management-Agent

./: .gitignore  AGENT_ARCHITECTURE.md  AUTHENTICATION_SUMMARY.md  EXCEL_COLUMNS.txt  HACKATHON_EVALUATION.md  LICENSE  README.md  app_constants.py  app_logging.py  auth_runner.py  gdrive_manager.py  poster_agent.py  pyproject.toml  requirements.txt  run.py  setup.py
.github/: dependabot.yml
.kiro/specs/brand-intelligence-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/content-extraction-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/poster-design-decision-agent/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/poster-learning-agent/: tasks.md  (+3 more)
diagrams/: WiMLDS_Architecture_Diagrams.html
docs/: DEVELOPMENT_WORKFLOW.md  README.md  X_AGENT_INTEGRATION_GUIDE.md
docs/app/: AI_SOCIAL_POSTING_AGENT.md  INSTALL_WINDOWS.md  README.md  SECURITY.md  USER_GUIDE.md
shared-modules/gdrive-manager/: gdrive_manager.py
wimlds/: WiMLDS_Master_Sheet.xlsx  bootstrap.py  cli.py  graph.py  requirements.txt  run_analytics.py  run_lg.py  run_post_event.py  run_social.py
wimlds/config/: .env.example  message_templates.py  poster_template.json  settings.py
wimlds/core/: drive_client.py  langgraph_orchestrator.py  logger.py  notifier.py  orchestrator.py  result.py  sheets_client.py  state_machine.py  validator.py
wimlds/scripts/: manual_meta_post.py  provision_drive.py  test_x_agent_integration.py  test_x_master_sheet_publish.py  validate_config.py
wimlds_poc_demo/wimlds_poc/: README.md  demo.py  requirements.txt
(+64 files in other folders)
