[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-event-management"
version = "0.1.0"
description = "WiMLDS Pune meetup automation system"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["wimlds*"]

[tool.setuptools.dynamic]
dependencies = {file = ["wimlds/requirements.txt"]}
